Remove shifted modifyier, fix target, fix resize wide card

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -18,9 +18,8 @@ html, body{
 
 .wrapper{
     position: absolute;
-    margin-left: 30px;
+    left: 30px;
     box-sizing: border-box;
-    display: inline-block;
     top: 20px;
     bottom: 20px;
     z-index: 1;
@@ -34,25 +33,27 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 460px;
-    &:last-child{
-        max-width: none;
+    width: 400px;
+    max-width: 400px;
+
+    &.__wide:last-child{
+        // -60px отступы слева + такой же справа
+        width: calc(~"100vw - 60px");
+        max-width: 960px;
+        min-width: 400px;
     }
-    &.__wide{
-        width: 460px;
-        &:last-child{
-            max-width: 960px;
-            width: 100vw;
-        }
+
+    & + &.__wide:last-child{
+        // -60px отступы слева + такой же справа + сдвиг
+        width: calc(~"100vw - 120px");
     }
+
     &.__narrow{
         width: 400px;
     }
-    &.__shifted{
-        margin-left: 60px;
-    }
-    &.__deck{
-        width: 400px;
+
+    & + &:last-child{
+        left: 60px;
     }
 }
 
